添加背景图片和按钮

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 		<link rel="stylesheet" href="./css/main.css" />
 	</head>
 	<body>
+		<div class="btnbox">
+			<button id='start'>开始</button>
+			<button id='pause'>暂停</button>
+			<button id='restart'>重开</button>
+		</div>
 		<div id="stage"></div>
+		
 	</body>
 </html>
